Liquidation examples corrections based on review feedback.

--- a/app/lending/(2-guides)/liquidation-examples/page.mdx
+++ b/app/lending/(2-guides)/liquidation-examples/page.mdx
@@ -33,11 +33,10 @@ Second chunk executes → debt 78,051 USDC → collateral 0.8 BTC → LTV 88.7% 
 
 Soft liquidation protected the position with minimal impact.
 
----
 
 ## Example 2: Hard Liquidation
 
-Continuing from the earlier example:
+Continuing from the earlier example (after the first chunk's execution):
 
 - Debt: 89,025.5 USDC
 - Collateral: 0.9 BTC
