--- a/app/lending/(1-concepts)/FAQ/page.mdx
+++ b/app/lending/(1-concepts)/FAQ/page.mdx
@@ -40,29 +40,16 @@ Loan positions are isolated; the **account** itself is unified.
 ## Event Streams, Bots & Integrations
 
 ### How are liquidations announced through RPC/API?
-Liquidation tranches appear in the same event stream as internal swaps, with extra metadata:
 
-- position ID
-- tranche size
-- collateral/debt values
-- oracle reference price
-- LPP min/max bounds
-- tranche sequencing
+Liquidation swaps appear in the same event stream as regular scheduled swaps.
 
-Large liquidations appear simply as multiple DCA-style tranches.
+There is **no special metadata** that distinguishes liquidation swaps from ordinary swaps.
+They are processed exactly the same way, and LPs are expected to price all swaps competitively,there is no need for them to know which swaps are liquidations.
+
+Large liquidations simply appear as multiple DCA-style tranches.
 
 ### Are liquidation orders flagged separately?
-Yes. Each tranche carries a liquidation flag so LPs, bots and integrators can react appropriately.
-
-### What should LP bots expect during mass liquidations?
-LP bots should:
-
-- plan inventory to fill predictable tranche flow
-- expect frequent LPP updates
-- handle partial fills
-- keep quoting normally for non-liquidation swaps
-
-Liquidations do not degrade swapper UX.
+No, they are not flagged.
 
 ### Can integrators surface liquidation data in their own UIs?
 Yes. All liquidation activity is exposed through standard RPC events.
@@ -141,11 +128,16 @@ Repayments or top-ups may remain enabled depending on Safe Mode level.
 ## Liquidity & Execution Behaviour
 
 ### Are liquidations prioritised over normal swaps?
-Not artificially.
-Liquidations follow the same matching rules, but LPs may naturally prioritise them because:
 
-- pricing is oracle-indexed
-- LPP bounds create predictable incentives
+Not artificially.
+
+All swaps, liquidation or regular, are bundled together before execution. LPs do not target individual swaps, instead they place limit orders at specific blocks, and the protocol consumes those orders as long as price limits (LPP) are respected.
+
+However, liquidation swaps may have a higher chance of being executed because:
+
+- they always use LPP-based pricing
+- they follow market price even if it drops significantly
+- unlike regular swaps, they do not have an absolute minimum price that could cause a refund
 
 ### Do liquidations affect normal user swaps?
 No. The JIT AMM ensures:
