Concept link added on TSS

--- a/app/lending/(1-concepts)/concepts/page.mdx
+++ b/app/lending/(1-concepts)/concepts/page.mdx
@@ -24,4 +24,7 @@ Per-loan liquidations are not supported in this version.
 Deposits and withdrawals are permissionless, with temporary pauses only during oracle failures or system safety checks. These pauses automatically resolve when safe conditions return.
 
 #### Shared Infrastructure With the Chainflip Swapping DEX
-Lending is part of Chainflip’s core State Chain logic and inherits the same consensus rules, safety guarantees, and TSS/MPC vault protections as the DEX itself.
+
+Lending is part of Chainflip’s core State Chain logic and inherits the same
+[consensus rules, safety guarantees, and TSS/MPC vault protections](https://docs.chainflip.io/protocol/egress-broadcasting-funds#egress-broadcasting-funds)
+as the DEX itself.
