--- a/app/lending/(1-concepts)/supply/page.mdx
+++ b/app/lending/(1-concepts)/supply/page.mdx
@@ -32,7 +32,7 @@ Although the protocol supports automatic top-ups, **auto-top-up will be disabled
 This ensures testers do not unintentionally use their account balance to top up collateral during aggressive LTV conditions.
 </Callout>
 
-Borrowers can also specify a **top-up asset**, which determines which asset the protocol will use for automatic top-ups.
+The **top-up asset** configured by the borrowers determines which asset the protocol will use for automatic top-ups.
 - This allows users to control exactly which asset should be consumed during auto-top-up events.
 - Setting a primary collateral asset is optional and can be done at any time.
 
@@ -65,7 +65,7 @@ Loan interest accrues in the borrowed asset and updates every 10 blocks. Lenders
 
 ### Repayments
 Borrowers may repay debt at any time using:
-balance in their State Chain account
-assets swapped internally on the Chainflip DEX prior to repayment
+- balance in their State Chain account
+- assets swapped internally on the Chainflip DEX prior to repayment
 
 Repayment reduces outstanding debt and improves LTV. When the debt reaches zero, the position closes automatically and all remaining collateral becomes withdrawable.
