docs: add missing protocol overview link

--- a/app/lending/(1-concepts)/concepts/page.mdx
+++ b/app/lending/(1-concepts)/concepts/page.mdx
@@ -9,7 +9,7 @@ description: Core concepts behind Chainflip Lending
 
 #### Native Cross-Chain Custody
 Chainflip Lending is built into the existing Chainflip cross-chain infrastructure. When users deposit assets from their native chains into the Chainflip system, their funds are held in Vaults on the native chain controlled by the decentralised network through a 100 of 150 threshold signature scheme.
-See Protocol Overview for more details.
+See [Protocol Overview](https://docs.chainflip.io/protocol/protocol-overview) for more details.
 
 #### Permissionless Lending Architecture
 Using this basic building block, Chainflip Lending adds a range of features to allow for the permissionless creation of loan positions for both lenders and borrowers.
