Fix typo in collateralisation page

--- a/app/lending/(1-concepts)/collateralisation/page.mdx
+++ b/app/lending/(1-concepts)/collateralisation/page.mdx
@@ -75,7 +75,7 @@ Liquidation continues until:
 
 Borrowers may also manually trigger soft liquidation to unwind a position and reclaim remaining collateral.
 Liquidation fee does not apply if it was triggered manually.
-However, if at any point during manual liquidation LTV crossess soft/hard liquidation threshold, it will lose its "manual" status, and liquidation fee will still apply (though only on the protion of collateral swapped during the non-manual period).
+However, if at any point during manual liquidation LTV crossess soft/hard liquidation threshold, it will lose its "manual" status, and liquidation fee will still apply (though only on the portion of collateral swapped during the non-manual period).
 
 <Callout type="info">
 Note that since liquidation swaps are processed in discrete chunks, the final chunk may result in some excess of the loan asset after fully repaying the loan.
