Update State Chain account authentication description
Clarify the explanation of the State Chain account authentication process.

--- a/app/lending/(2-guides)/how-to-borrow/page.mdx
+++ b/app/lending/(2-guides)/how-to-borrow/page.mdx
@@ -28,14 +28,12 @@ Start by connecting either:
 - an **EVM wallet** (MetaMask, Rabby, etc.), or
 - a **Polkadot.js wallet**
 
-Connecting authenticates your **State Chain account**, where:
+Connecting authenticates your **State Chain account**, which contains:
 
 - balances
 - collateral
 - loans
 - repayment logic
-
-all live.
 
 <Callout type="info">
   Your connected wallet is **not** the wallet holding your collateral - it only authenticates your account.
